packages/cardhost/app/styles/components/themer.css
.cardhost-card-theme-editor {
  position: fixed;
  right: 0;
  top: 0;
  width: 40%;
  height: 100%;
  background: var(--ch-deep-background);
  z-index: 11;
  padding: 20px;
  transform: translateX(0%);
  opacity: 0.95;
}

.cardhost-card-theme-editor.bottom-docked {
  top: auto;
  bottom: 0;
  left: 0;
  height: 40%;
  width: 100%;
  transform: translateY(0%);
}

.cardhost-card-theme-editor.right-docked .resizable-content {
  padding-top: 50px;
}

.cardhost-card-theme-editor.hidden {
  transform: translateX(100%);
}

.cardhost-card-theme-editor.bottom-docked.hidden {
  transform: translateY(100%);
}


.cardhost-card-theme-editor .resizable-content {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.cardhost-card-theme-editor.bottom-docked .resizable-content {
  flex-direction: row;
}

.cardhost-card-theme-editor .editor-section {
  height: 50%;
  width: 100%;
  padding: 12px 0 12px 12px;
}

.cardhost-card-theme-editor.bottom-docked .editor-section {
  padding: 12px;
}

.cardhost-card-theme-editor.bottom-docked .editor-section {
  height: 100%;
  width: 50%;
}

.cardhost-card-theme-editor .editor-container {
  border: 1px solid var(--ch-default);
  border-radius: 10px;
  overflow: hidden;
  height: 100%;
}

.cardhost-card-theme-editor .editor-container__title {
  background-color: var(--ch-default);
  font: 600 13px/18px var(--ch-font-family);
  letter-spacing: 0.035em;
  padding: 12px;
}

.cardhost-card-theme-editor .editor-container__title > span {
  font-weight: 400;
}

.cardhost-card-theme-editor .resizer.left {
  left: 5px;
  width: 25px;
}

.cardhost-card-theme-editor .resizer.top {
  height: 25px;
}

.cardhost-card-theme-editor .drag-handle {
  position: absolute;
  left: -12px;
  top: 50%;
  transform: rotate(180deg);
  z-index: -1;
}

.cardhost-card-theme-editor.bottom-docked .drag-handle {
  left: 49.5%;
  top: -18px;
  transform: rotate(-90deg);
}

.cardhost-card-theme-editor .drag-handle path {
  stroke: var(--ch-light-background);
}

.cardhost-card-document--codeblock {
  height: 0;
}

.cardhost-monaco-container {
  min-height: 50px;
  margin-bottom: 1em;
  padding-top: 1em;
  overflow: hidden;
  resize: vertical;
  background-color: #1e1e1e;
}

.themer--top-edge-container .show-editor-btn, .themer--top-edge-container .hide-editor-btn {
  margin-top: 10px;
  margin-right: 15px;
  cursor: pointer;
}

.themer--top-edge-container .dock-btn {
  margin: 10px 15px;
  cursor: pointer;
}

.themer--top-edge-container .cs-component-cta, .themer--top-edge-container .save-button {
  width: 150px;
  margin-left: 20px;
  align-self: start;
  display: inline-block;
  vertical-align: top;
}

.cardhost-card-theme-editor .editor-container.editor-pane--container-highlighted {
  border: 2px solid var(--ch-highlight);
}

.editor-pane--container-highlighted .editor-container__title {
  background-color: var(--ch-highlight);
  color :var(--ch-default);
}

.editing-css {
  padding-left: 0;
  width: 100%;
  padding-right: 40%;
  transition: var(--ch-card-padding-animate), var(--ch-card-background-color-animate);
  background-color: var(--ch-dark-background);
}

.editing-css.full-width {
  padding-right: 0;
}

.themer--top-edge-container {
  display: grid;
  position: fixed;
  top: var(--ch-spacing);
  right: var(--ch-spacing);
  left: 40px;
  z-index: 12;
  grid-template-columns: auto auto;
}

.themer--top-edge-container .ch-button {
  color: var(--ch-light);
}

.themer--top-edge-container .ch-button.selected {
  color: var(--ch-highlight);
}

.themer--top-edge-width-controls {
  justify-self: start;
}

.themer--top-edge-pane-controls {
  justify-self: end;
}

.themer--top-edge-width-controls .ch-button + .ch-button {
  margin-left: 45px;
}

.ch-button--icon.eye-on {
  --icon-url: url('/assets/images/buttons/eye-on.svg');
  background-size: 30px;
  margin-right: 20px;
}
.ch-button--icon.eye-on:hover {
  --icon-url: url('/assets/images/buttons/eye-on.svg');
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.ch-button--icon.eye-off {
  --icon-url: url('/assets/images/buttons/eye-off.svg');
  background-size: 30px;
  margin-right: 20px;
}

.ch-button--icon.eye-off:hover {
  --icon-url: url('/assets/images/buttons/eye-off.svg');
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.ch-button--icon.dock-right {
  --icon-url: url('/assets/images/buttons/dock-right-secondary.svg');
  background-size: 25px 25px;
}

.ch-button--icon.dock-right.selected {
  --icon-url: url('/assets/images/buttons/dock-right.svg');
}

.ch-button--icon.dock-bottom {
  --icon-url: url('/assets/images/buttons/dock-bottom-secondary.svg');
  background-size: 25px 25px;
}

.ch-button--icon.dock-bottom.selected {
  --icon-url: url('/assets/images/buttons/dock-bottom.svg');
}

.ch-button--icon.dock-bottom:hover,
.ch-button--icon.dock-right:hover {
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.ch-button--icon.responsive {
  --icon-url: url('/assets/images/buttons/responsive-inactive.svg');
  width: auto;
  height: auto;
  padding-top: 25px;
  background-size: 25px 25px;
  background-position: top;
  justify-content: center;
  align-items: flex-end;
  box-shadow: none;
  border-radius: 0;
}

.ch-button--icon.responsive.selected {
  --icon-url: url('/assets/images/buttons/responsive-active.svg');
}

.ch-button--icon.responsive:hover,
.ch-button--icon.full-width:hover {
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.ch-button--icon.full-width {
  --icon-url: url('/assets/images/buttons/full-width-inactive.svg');
  width: auto;
  height: auto;
  padding-top: 25px;
  background-size: 20px 20px;
  background-position: top;
  display: inline-flex;
  justify-content: center;
  align-items: flex-end;
  box-shadow: none;
  border-radius: 0;
}

.ch-button--icon.full-width.selected {
  --icon-url: url('/assets/images/buttons/full-width-active.svg');
}

